<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".InicioSesionActivity">

    <EditText
        android:id="@+id/user"
        android:layout_width="279dp"
        android:layout_height="56dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="87dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_user"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/icon_user"
        android:layout_width="107dp"
        android:layout_height="93dp"
        android:layout_marginStart="143dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/user" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="215dp"
        android:layout_height="55dp"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="217dp"
        android:backgroundTint="#FFE333"
        android:onClick="comprobar"
        android:text="@string/login_button"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/register"
        android:layout_width="292dp"
        android:layout_height="21dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="28dp"
        android:onClick="registrar"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_psw"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/forget_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="104dp"
        android:text="@string/forget_psw"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.079" />

    <EditText
        android:id="@+id/psw"
        android:layout_width="282dp"
        android:layout_height="55dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="113dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/psw"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>