<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegistroActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="166dp"
        android:layout_height="134dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="498dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/id" />

    <EditText
        android:id="@+id/user_register"
        android:layout_width="278dp"
        android:layout_height="56dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="92dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/psw_register"
        android:layout_width="280dp"
        android:layout_height="61dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="343dp"
        android:ems="10"
        android:hint="@string/psw"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_register"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/psw_register_2"
        android:layout_width="281dp"
        android:layout_height="64dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="248dp"
        android:ems="10"
        android:hint="@string/psw_register_2"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/psw_register" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="237dp"
        android:layout_height="67dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="146dp"
        android:backgroundTint="#FFE333"
        android:onClick="registrar"
        android:text="@string/register_button"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/psw_register_2" />
</androidx.constraintlayout.widget.ConstraintLayout>