<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainMenuActivity">

    <Button
        android:id="@+id/instrucciones_button"
        android:layout_width="220dp"
        android:layout_height="58dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="201dp"
        android:backgroundTint="#33FF86"
        android:onClick="instrucciones"
        android:text="@string/instrucciones_button"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="220dp"
        android:layout_height="58dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="96dp"
        android:backgroundTint="#33FF86"
        android:onClick="comenzar"
        android:text="@string/start_button"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_main"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/titulo_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="177dp"
        android:text="@string/titulo_main"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <ImageView
        android:id="@+id/imagen_copas"
        android:layout_width="409dp"
        android:layout_height="491dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/copas" />
</androidx.constraintlayout.widget.ConstraintLayout>